--- a/contact.css
+++ b/contact.css
@@ -1,4 +1,8 @@
-.page-title{
+body{
+    background-image: url(./images/waves-design/contact-wave.png);
+
+}
+.page-title {
     display: flex;
     justify-content: center;
     align-items: center;
