video carousels added

--- a/carosels.css
+++ b/carosels.css
@@ -10,11 +10,11 @@
     background-color: black;
     /* border: 3px solid rgb(51, 0, 255); */
   }
-  .button{
+ 
    
 
    
-  }
+  /* }
   .button-container{
     border: 3px solid red; 
     width:  1000px;
@@ -29,4 +29,11 @@
   color: white;
   border: 3px solid rgb(0, 255, 149);
  
- }
+ } */
+ .exit{
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 400px;
+  margin-top: 20px;
+}
