--- a/allstyles.css
+++ b/allstyles.css
@@ -15,17 +15,21 @@ body{
     justify-content: center;
     font-size: 25px;
     flex-wrap: wrap;
+   
 }
+
+
 
 /* the styling of the navigation bar*/
 .main-nav{
-    border: 2px solid red;
     display: flex;
+    border: 3px solid red;
     align-items: center;
     justify-content: space-between;
     top: 42px;
+    margin-top: 0px; 
+    width: 1440px;
 }
-
 .main-nav img{
     border: 2px solid blue;
     max-width: 900px;
@@ -77,7 +81,6 @@ a:visited {
 }
 .left-footer{
    border: 2px solid blue; 
-   
 }
 .left-footer p{
    font-size: 20px;
@@ -88,14 +91,11 @@ a:visited {
    color: rgb(251, 248, 248);
    text-decoration: underline;
 }
-
 .left-footer a:hover{
     color: rgba(219, 42, 85, 1);;
-
 }
 .right-footer{
    border: 2px solid blue;
-   
 }
 .right-footer h1{
    font-size: 20px;
