--- a/work-styles.css
+++ b/work-styles.css
@@ -12,7 +12,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 .sub-nav ul{
     border: 2px solid blue;
@@ -184,13 +183,15 @@ h1{
 /* ---------------------------------STREET PHOTOGRAPHY PAGE-----------------------------------*/
 .sub-title{
     border: 3px solid rgb(235, 8, 12);
-    margin: auto;
     font-size: 25px;
     color: rgba(219, 42, 85, 1);
     font-weight: bold;   
     background-color: white;
-  
+    width: 1440px; 
+    display: flex;
+    justify-content: center;
 }
+
 .container-gallery{
     border: 5px solid rgb(9, 2, 3);
     border-radius: 7px;
